--- a/public/game.html
+++ b/public/game.html
@@ -787,6 +787,7 @@ const imagesToLoad = [
         loadingScreen.style.opacity = 0;
         setTimeout(() => {
           loadingScreen.style.display = 'none';
+          startGame();
         }, 800);
       }, 500);
     }
@@ -806,6 +807,21 @@ const imagesToLoad = [
 
   document.addEventListener("click", unlockAudio);
   document.addEventListener("keydown", unlockAudio);
+
+  function ensureMusicPlaying() {
+    const music = window.gameSounds?.backgroundMusic;
+    const musicEnabled = localStorage.getItem("musicEnabled") === "true";
+
+    if (music && musicEnabled && music.paused) {
+      music.play().catch(() => {});
+    }
+  }
+
+  // Listen for any user interaction
+  ["click", "keydown", "input", "focus"].forEach(evt => {
+    document.addEventListener(evt, ensureMusicPlaying, { passive: true });
+  });
+  
 </script>
 </body>
 </html>
