--- a/public/game.html
+++ b/public/game.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fighting Game</title>
 
     <!-- Fonts -->
@@ -32,6 +33,11 @@
 
       canvas {
         display: block;
+        max-width: 100%;
+        max-height: 100vh;
+        width: auto;
+        height: auto;
+        object-fit: contain;
       }
 
       #mainMenu {
