feat: implement AI controller and game mode selection in player names

--- a/public/game.html
+++ b/public/game.html
@@ -711,8 +711,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script type="module" src="./js/sound.js"></script>
-    <script src="js/classes.js"></script>
+    <script type="module" src="./js/sound.js"></script>    <script src="js/ai.js"></script>    <script src="js/classes.js"></script>
     <script src="js/game.js"></script>
     <script>
 const imagesToLoad = [
